# dealflow-ai

./: .gitignore  README.md  buyers.csv  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/lib/: supabase.ts  useSupabaseAuth.ts
frontend/src/pages/: BuyersPage.tsx
scripts/: import_csv.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_create_buyers.sql  002_ownerid_to_text.sql
